[package]
name = "sync"
version = "0.1.0"
edition = "2021"
description = "A repo to provide sync data ability between multiple servers vie tonic."
repository = "https://github.com/JasonkayZK/sync"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
dotenv = "0.15"
chrono = "0.4.26"
anyhow = "1.0"
serde = { version = "1.0.171" }
boost-rs = { version = "0.0.9", features = ["rand"] }
parking_lot = "0.12.1"
once_cell = "1.18.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
local-ip-address = "0.5.4"
prost = "0.11.3"
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.11.0"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"
